--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,14 +14,17 @@ include(interval.cmake)
 if(${BUILD_INTERVAL_APPLICATON})
     qt_add_executable(appIntervaltimer
         main.cpp
-        PlanModel.h
-        PlanModel.cpp
     )
 
-    add_subdirectory(qml)
+    qt_add_qml_module(appIntervaltimer
+        URI IntervalApplication
+        VERSION 1.0
+        QML_FILES 
+            main.qml
+    )
 
     target_compile_definitions(appIntervaltimer
         PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
     target_link_libraries(appIntervaltimer
-        PRIVATE Qt6::Quick IntervaltimerLib IntervalTimerQMLplugin)
+        PRIVATE Qt6::Quick IntervaltimerLib IntervaltimerLibplugin)
 endif()
