--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,13 @@
-name: Test Runner
+name: Deploy Runner
 
-on: push
-# on:
-#   push:
-#     branches:
-#       - master
+on:
+  push:
+    branches:
+      - master
+
 jobs:
   Deploy-MSCV:
-    name: "Run-Tests-MSCV"
+    name: "Deploy Intervaltimer for Windows"
     runs-on: windows-latest
     
     steps:
@@ -20,14 +20,6 @@ jobs:
         uses: jurplel/install-qt-action@v2
         with:
           version: '6.2.1'
-
-      - name: env varialbes
-        run: | 
-          gci env:* | sort-object name
-
-      - name: show QT
-        run: | 
-          Get-ChildItem -Recurse $Env:Qt6_DIR | Where { ! $_.PSIsContainer } | Select Name,FullName,Length
 
       - name: Install Tools Ninja and mvsc
         uses: ilammy/msvc-dev-cmd@v1
@@ -51,3 +43,21 @@ jobs:
         with:
           name: windows
           path: deploy
+
+  Deploy-Android:
+    name: "Deploy Intervaltimer for Android"
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: mkdir 
+        run: mkdir ${GITHUB_WORKSPACE}/build
+
+      - name: Build
+        run: >-
+          docker run --rm 
+          -v ${GITHUB_WORKSPACE}:/project 
+          -v ${GITHUB_WORKSPACE}/build:/build
+          ghcr.io/fettpet/docker_qt_android:qt6.2.2-android_sdk7583922
+          -DCMAKE_BUILD_TYPE=Release
