Feature: Add a implementation for timer which uses QTimer
Ticket: #4

--- a/src/Intervaltimer/CMakeLists.txt
+++ b/src/Intervaltimer/CMakeLists.txt
@@ -38,6 +38,8 @@ qt_add_qml_module(Intervaltimer
         intervaltimer/PlanRunner.cpp
         intervaltimer/PlanToJson.h
         intervaltimer/PlanToJson.cpp
+        intervaltimer/Timer.h
+        intervaltimer/Timer.cpp
         intervaltimer/TimerBase.h
         intervaltimer/TimerBase.cpp
 )
