--- a/src/Intervaltimer/CMakeLists.txt
+++ b/src/Intervaltimer/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.21)
 
 set(CMAKE_CXX_STANDARD 20)
 
-find_package(Qt6 6.2 COMPONENTS Quick Qml REQUIRED)
+find_package(Qt6 6.2 COMPONENTS Quick Qml Sql Core REQUIRED)
 
 qt_add_library(Intervaltimer STATIC)
 
@@ -20,6 +20,8 @@ qt_add_qml_module(Intervaltimer
         qml/PlanEditorView.qml
         qml/PlanRunningView.qml
     SOURCES
+        intervaltimer/DatabaseProvider.h
+        intervaltimer/DatabaseProvider.cpp
         intervaltimer/Interval.cpp
         intervaltimer/Interval.h
         intervaltimer/IntervalFromJson.h
@@ -47,4 +49,6 @@ qt_add_qml_module(Intervaltimer
 target_link_libraries(Intervaltimer PUBLIC
     PUBLIC Qt6::Quick
     PUBLIC Qt6::Qml
+    PUBLIC Qt6::Sql
+    PUBLIC Qt6::Core
     )
