--- a/src/Intervaltimer/CMakeLists.txt
+++ b/src/Intervaltimer/CMakeLists.txt
@@ -38,6 +38,8 @@ qt_add_qml_module(Intervaltimer
         intervaltimer/PlanFromJson.cpp
         intervaltimer/PlanRunner.h
         intervaltimer/PlanRunner.cpp
+        intervaltimer/PlanStorageModel.h
+        intervaltimer/PlanStorageModel.cpp
         intervaltimer/PlanToJson.h
         intervaltimer/PlanToJson.cpp
         intervaltimer/Timer.h
