--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake .. -GNinja
+          cmake .. -GNinja -DCMAKE_BUILD_TYPE=Release
           cmake --build . --target all
           cd ..
           mkdir deploy 
