Feature: Implement the basic settings for different UIs in Win and Android
* call different main qml files
* split the library into four sub libs: one for cpp part, one for qml desctop, one
for qml android and one to combine them

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,8 @@ if(${BUILD_INTERVAL_APPLICATON})
         URI IntervalApplication
         VERSION 1.0
         QML_FILES 
-            main.qml
+            mainDesctop.qml
+            mainAndroid.qml
         IMPORT_PATH "${QML_IMPORT_PATH}/src"
     )
 
@@ -24,7 +25,6 @@ if(${BUILD_INTERVAL_APPLICATON})
         PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
     target_link_libraries(IntervaltimerApplication
         PRIVATE Qt6::Quick
-        PRIVATE IntervaltimerPlugin
         PRIVATE Intervaltimer
         )
 endif()
