--- a/src/Intervaltimer/CMakeLists.txt
+++ b/src/Intervaltimer/CMakeLists.txt
@@ -5,23 +5,18 @@ set(CMAKE_CXX_STANDARD 20)
 find_package(Qt6 COMPONENTS Quick Qml Sql Core REQUIRED)
 
 qt_add_library(Intervaltimer STATIC)
+qt_add_library(IntervaltimerCpp STATIC)
+qt_add_library(IntervaltimerDesctop STATIC)
+qt_add_library(IntervaltimerAndroid STATIC)
 
-target_include_directories(Intervaltimer PUBLIC
+target_include_directories(IntervaltimerCpp PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/intervaltimer>
 )
 
-qt_add_qml_module(Intervaltimer
+qt_add_qml_module(IntervaltimerCpp
     URI Intervaltimer
     VERSION 1.0
-    PLUGIN_TARGET IntervaltimerPlugin
-    QML_FILES
-        qml/IntervalView.qml
-        qml/LoadPlanView.qml
-        qml/PlanView.qml
-        qml/PlanEditorView.qml
-        qml/PlanRunningView.qml
-        qml/StorePlanView.qml
-        qml/ProgressView.qml
+    PLUGIN_TARGET IntervaltimerCppPlugin
     SOURCES
         intervaltimer/DatabaseProvider.h
         intervaltimer/DatabaseProvider.cpp
@@ -49,11 +44,79 @@ qt_add_qml_module(Intervaltimer
         intervaltimer/Timer.cpp
         intervaltimer/TimerBase.h
         intervaltimer/TimerBase.cpp
+    OUTPUT_DIRECTORY IntervaltimerCpp
 )
 
-target_link_libraries(Intervaltimer PUBLIC
+target_link_libraries(IntervaltimerCpp PUBLIC
     PUBLIC Qt6::Quick
     PUBLIC Qt6::Qml
     PUBLIC Qt6::Sql
     PUBLIC Qt6::Core
+)
+
+
+target_include_directories(IntervaltimerDesctop PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/intervaltimer>
+)
+
+qt_add_qml_module(IntervaltimerDesctop
+    URI Intervaltimer.Desctop
+    VERSION 1.0
+    PLUGIN_TARGET IntervaltimerDesctopPlugin
+    QML_FILES
+        qml/desctop/IntervalView.qml
+        qml/desctop/LoadPlanView.qml
+        qml/desctop/PlanView.qml
+        qml/desctop/PlanEditorView.qml
+        qml/desctop/PlanRunningView.qml
+        qml/desctop/StorePlanView.qml
+        qml/desctop/ProgressView.qml
+    OUTPUT_DIRECTORY Intervaltimer
+)
+
+target_link_libraries(IntervaltimerDesctop PUBLIC
+    PUBLIC Qt6::Quick
+    PUBLIC Qt6::Qml
+    PUBLIC Qt6::Sql
+    PUBLIC Qt6::Core
+    PRIVATE IntervaltimerCppPlugin
+    PRIVATE IntervaltimerCpp
     )
+
+target_include_directories(IntervaltimerAndroid PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/intervaltimer>
+)
+
+
+qt_add_qml_module(IntervaltimerAndroid
+    URI Intervaltimer.Android
+    VERSION 1.0
+    PLUGIN_TARGET IntervaltimerAndroidPlugin
+    QML_FILES
+        qml/android/IntervalView.qml
+        qml/android/LoadPlanView.qml
+        qml/android/PlanView.qml
+        qml/android/PlanEditorView.qml
+        qml/android/PlanRunningView.qml
+        qml/android/StorePlanView.qml
+        qml/android/ProgressView.qml
+)
+
+target_link_libraries(IntervaltimerAndroid PUBLIC
+    PUBLIC Qt6::Quick
+    PUBLIC Qt6::Qml
+    PUBLIC Qt6::Sql
+    PUBLIC Qt6::Core
+    PRIVATE IntervaltimerCppPlugin
+    PRIVATE IntervaltimerCpp
+)
+
+target_link_libraries(Intervaltimer PUBLIC
+    PUBLIC IntervaltimerCppPlugin
+    PUBLIC IntervaltimerCpp
+    PUBLIC IntervaltimerAndroidPlugin
+    PUBLIC IntervaltimerAndroid
+    PUBLIC IntervaltimerDesctopPlugin
+    PUBLIC IntervaltimerDesctop
+)
+
