Feature: insert PlanStorageBuffer
This is used to store the plans with a name. It is interface for a map.
This is used as a dependency injection for PlanStorageModel

--- a/src/Intervaltimer/CMakeLists.txt
+++ b/src/Intervaltimer/CMakeLists.txt
@@ -36,6 +36,8 @@ qt_add_qml_module(IntervaltimerCpp
         intervaltimer/PlanFromJson.cpp
         intervaltimer/PlanRunner.h
         intervaltimer/PlanRunner.cpp
+        intervaltimer/planstoragebuffer.h
+        intervaltimer/planstoragebuffer.cpp
         intervaltimer/PlanStorageModel.h
         intervaltimer/PlanStorageModel.cpp
         intervaltimer/PlanToJson.h
