Chore: Add version control in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,16 @@
 cmake_minimum_required(VERSION 3.21)
 
-project(Intervaltimer VERSION 1.1 LANGUAGES CXX)
+set (CMAKE_PROJECT_VERSION_MAJOR 1)
+set (CMAKE_PROJECT_VERSION_MINOR 1)
+set (CMAKE_PROJECT_VERSION_PATCH 0)
+set (CMAKE_PROJECT_VERSION "${CMAKE_PROJECT_VERSION_MAJOR}.${CMAKE_PROJECT_VERSION_MINOR}.${CMAKE_PROJECT_VERSION_PATCH}")
+
+add_compile_definitions(CMAKE_PROJECT_VERSION_MAJOR=${CMAKE_PROJECT_VERSION_MAJOR})
+add_compile_definitions(CMAKE_PROJECT_VERSION_MINOR=${CMAKE_PROJECT_VERSION_MINOR})
+add_compile_definitions(CMAKE_PROJECT_VERSION_PATCH=${CMAKE_PROJECT_VERSION_PATCH})
+
+
+project(Intervaltimer VERSION  "${CMAKE_PROJECT_VERSION}" LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 
